# Myprojects

./: .gitignore
QT_projects/QtLogger/: .gitignore  CMakeLists.txt  QtLogger.h  main.cpp
